Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,11 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lukewitchger@gmail.com'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "email = \"lukewitchger@gmail.com\"\n"
+    "email = \"lukewitchger@gmail.com\"\n",
+    "email\n"
    ]
   },
   {
